--- a/Web-3.0/Quarter-1/TypeScript/Projects/Node-Projects/project00_calculator/package.json
+++ b/Web-3.0/Quarter-1/TypeScript/Projects/Node-Projects/project00_calculator/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@zeeshanasim/cli-math-calc",
-  "version": "1.0.0",
+  "name": "cli-math-calc",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "type": "module",
-  "bin":{"calc": "./index.js"} ,
+  "bin":"./index.js" ,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "ZeeshanAsim",
+  "author": "Zeeshan-Asim",
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.2.0",
