--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 Web-3.0/Quarter-1/TypeScript/Projects/Step03a_Modules/
+Web-3.0/Quarter-2/Generative-AI/Lecture-2-DevChat-16Sep23/old-ChatDev-panaverse-git/
